k8s/route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: z-3sp-route
spec:
  parentRefs:
    - name: traefik-gateway
      namespace: gw
      # sectionName: web
  hostnames:
    - "api.jsesp.cn"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /sms
      backendRefs:
        - name: z-3sp
          port: 80
